--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ build-android:
       uses: ArtemSBulgakov/buildozer-action@v1
       id: buildozer
       with:
-        workdir: <specify the directory of the app no don't mention this the app files are in root directory>
+        workdir: <main.py>
         buildozer_version: stable
 
     - name: Upload artifacts
